_sass/_custom.scss
/* ==========================================================================
   CUSTOM OVERRIDES
   ========================================================================== */

strong {
  color: #08519C;
}

.archive {
  color: #536878;
}

.archive p,
.archive li,
.archive .news-list li,
.page__content p,
.page__content li,
.page__content .news-list li {
  font-size: 0.8rem;
}

#main .page:first-child,
#main .archive:first-child {
  @include breakpoint($large) {
    float: none;
    width: 100%;
    margin-left: 0;
  }
}

.archive a,
.page__content a {
  text-decoration: none;

  &:hover {
    text-decoration: none;
    color: #6BAED6 !important;
  }

  &:visited {
    color: #6BAED6 !important;
  }
}

.author__name {
  color: #08519C;
}

.masthead {
  border-bottom: none;
}

.masthead__inner-wrap {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  column-gap: 1.5em;
  row-gap: 0.3em;
  padding-left: 0;
  padding-right: 0;
  border-bottom: 1px dotted #6BAED6;
}

.masthead__title {
  padding: 0;
  flex-shrink: 0;
}

.masthead__title a {
  font-family: 'Mr Dafoe', cursive;
  font-size: 2.6rem;
  line-height: 1;
  color: #08306B;
}

.greedy-nav a,
.greedy-nav .visible-links a,
.greedy-nav .hidden-links a {
  color: #08306B;
  font-weight: 600;
  text-transform: none;
}

.masthead__menu {
  flex: 1 1 auto;
  min-width: 0;
}

.greedy-nav {
  min-width: 0;
  width: 100%;
}

.greedy-nav .visible-links {
  display: flex;
  width: fit-content;
  margin-left: auto;
}

.greedy-nav .visible-links li {
  display: block;
}

.page__footer {
  border-top: 1px dotted #6BAED6;
}

.page__footer-copyright {
  text-align: center;
  margin-bottom: 1em;
}

.page__footer-follow .social-icons {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
  list-style: none;
  margin: 0;
  padding: 0;
}

.page__footer-follow .social-icons li a {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 32px;
  height: 32px;
  border-radius: 50%;
  background: #08306B;
  color: #fff;

  i {
    color: #fff;
  }

  &:hover {
    background: #6BAED6;
    color: #fff !important;
    text-decoration: none;
  }
}

